--- a/src/main/resources/templates/admin/author.html
+++ b/src/main/resources/templates/admin/author.html
@@ -3,88 +3,87 @@
       xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
-        name="viewport">
-  <meta content="ie=edge" http-equiv="X-UA-Compatible">
-  <title>관리자 페이지</title>
-  <!-- 테일윈드 스타일시트 링크 추가 -->
-  <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <meta charset="UTF-8">
+    <meta content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0"
+          name="viewport">
+    <meta content="ie=edge" http-equiv="X-UA-Compatible">
+    <title>관리자 페이지</title>
+    <!-- 테일윈드 스타일시트 링크 추가 -->
+    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
 </head>
 <body>
 
 <main layout:fragment="content">
 
-  <header class="w-[1580px] mx-auto p-4 text-left border-b">
-    <div class="flex justify-between items-center">
-      <h1 class="text-[50px]">관리자 페이지</h1>
-      <div class="menu">
-        <div class="admin_menu flex space-x-4">
-          <ul class="flex space-x-4">
-            <li>
-
-              <a th:href="@{/admin/member}" class="menu-link">회원관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/notice}" class="menu-link">공지사항 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/domestic}" class="menu-link">국내도서 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/foreign}" class="menu-link">외국도서 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/author}" class="menu-link">작가관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/article}" class="menu-link">판매 글 관리</a>
-            </li>
-            <li>
-              <a th:href="@{/admin/calculate}" class="menu-link">정산관리</a>
-            </li>
-          </ul>
+    <header class="w-[1580px] mx-auto p-4 text-left border-b">
+        <div class="flex justify-between items-center">
+            <h1 class="text-[50px]">관리자 페이지</h1>
+            <div class="menu">
+                <div class="admin_menu flex space-x-4">
+                    <ul class="flex space-x-4">
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/member}">회원관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/notice}">공지사항 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/domestic}">국내도서 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/foreign}">외국도서 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/author}">작가관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/article}">판매 글 관리</a>
+                        </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
         </div>
-      </div>
+        <!-- ... -->
+    </header>
+    <!-- 회원 관리 테이블 -->
+    <div class="w-[1580px] mx-auto mt-[100px]">
+        <h1 class="text-3xl font-semibold my-6">작가 관리</h1>
+        <div class="overflow-x-auto">
+            <table class="min-w-full">
+                <thead>
+                <tr>
+                    <th class="py-2 px-4 border">NO.</th>
+                    <th class="py-2 px-4 border">ID</th>
+                    <th class="py-2 px-4 border">성</th>
+                    <th class="py-2 px-4 border">이름</th>
+                    <th class="py-2 px-4 border">닉네임</th>
+                    <th class="py-2 px-4 border">성별</th>
+                    <th class="py-2 px-4 border">생년월일</th>
+                    <th class="py-2 px-4 border">전화번호</th>
+                    <th class="py-2 px-4 border">활성 여부</th>
+                    <th class="py-2 px-4 border">권한부여</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr class="bg-white" th:each="member : ${memberList}">
+                    <td class="py-2 px-4 border" th:text="${member.id}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.userName}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.lastName}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.firstName}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.nickName}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.gender}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.birthDate}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.phone}"></td>
+                    <td class="py-2 px-4 border" th:text="${member.isActive}"></td>
+                    <td class="py-2 px-4 border"></td>
+                </tr>
+                </tbody>
+            </table>
+        </div>
     </div>
-    <!-- ... -->
-  </header>
-  <!-- 회원 관리 테이블 -->
-  <div class="w-[1580px] mx-auto mt-[100px]">
-    <h1 class="text-3xl font-semibold my-6">작가 관리</h1>
-    <div class="overflow-x-auto">
-      <table class="min-w-full">
-        <thead>
-        <tr>
-          <th class="py-2 px-4 border">NO.</th>
-          <th class="py-2 px-4 border">ID</th>
-          <th class="py-2 px-4 border">성</th>
-          <th class="py-2 px-4 border">이름</th>
-          <th class="py-2 px-4 border">닉네임</th>
-          <th class="py-2 px-4 border">성별</th>
-          <th class="py-2 px-4 border">생년월일</th>
-          <th class="py-2 px-4 border">전화번호</th>
-          <th class="py-2 px-4 border">활성 여부</th>
-          <th class="py-2 px-4 border">권한부여</th>
-        </tr>
-        </thead>
-        <tbody>
-        <tr class="bg-white" th:each="member : ${memberList}">
-          <td class="py-2 px-4 border" th:text="${member.id}"></td>
-          <td class="py-2 px-4 border" th:text="${member.userName}"></td>
-          <td class="py-2 px-4 border" th:text="${member.lastName}"></td>
-          <td class="py-2 px-4 border" th:text="${member.firstName}"></td>
-          <td class="py-2 px-4 border" th:text="${member.nickName}"></td>
-          <td class="py-2 px-4 border" th:text="${member.gender}"></td>
-          <td class="py-2 px-4 border" th:text="${member.birthDate}"></td>
-          <td class="py-2 px-4 border" th:text="${member.phone}"></td>
-          <td class="py-2 px-4 border" th:text="${member.isActive}"></td>
-          <td class="py-2 px-4 border" ></td>
-        </tr>
-        </tbody>
-      </table>
-    </div>
-  </div>
 </main>
 </body>
 </html>
