--- a/src/main/resources/templates/notice/notice_form.html
+++ b/src/main/resources/templates/notice/notice_form.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/html">
+<html xmlns="http://www.w3.org/1999/html" xmlns:th="http://www.w3.org/1999/xhtml">
 
 <head>
     <meta charset="UTF-8"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.15/dist/tailwind.min.css" rel="stylesheet">
-    <title>공지사항 작성</title>
+    <title th:text="${pageTitle}"></title>
 </head>
 
 <body>
 <div class="max-w-3xl mx-auto py-8">
-    <h1 class="text-3xl font-bold mb-4">공지사항 글쓰기</h1>
+    <h1 class="text-3xl font-bold mb-4" th:text="${pageTitle}"></h1>
     <form th:object="${noticeDto}" method="post" class="bg-white shadow-md rounded px-8 pt-6 pb-8 mb-4">
         <div th:replace="~{form_errors :: formErrorsFragment}"></div>
         <label class="block text-gray-700 text-sm font-bold mb-2" for="subject">제목</label>
@@ -19,12 +19,27 @@
         <label class="block text-gray-700 text-sm font-bold mb-2 mt-4" for="content">내용</label>
         <textarea id="content" name="content" th:field="${noticeDto.content}" placeholder="내용을 입력하세요"
                   class="appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline h-32"></textarea>
-        <div class="mt-6">
-            <input type="submit" value="작성" class="btn btn-primary btn-outline font-bold py-2 px-4 rounded">
-            <button type="button" class="ml-4"><a href="#" class="btn btn-primary btn-outline">취소</a></button>
+        <div class="mt-6 flex justify-end">
+            <button type="button" class="ml-4">
+                <a href="javascript:history.back()" class="btn btn-primary btn-outline">취소</a>
+            </button>
+            <input type="submit" value="작성" class="btn btn-primary btn-outline font-bold py-2 px-4 ml-5 rounded">
         </div>
     </form>
 </div>
+<script th:inline="javascript">
+    /* 페이지 로딩 시 등록/수정 성공 여부 파라미터 확인 및 알림 메시지 띄우기 */
+    document.addEventListener('DOMContentLoaded', function () {
+        const urlParams = new URLSearchParams(window.location.search);
+        const successType = urlParams.get('success');
+
+        if (successType === 'create') {
+            alert('등록이 완료되었습니다.');
+        } else if (successType === 'modify') {
+            alert('수정이 완료되었습니다.');
+        }
+    });
+</script>
 </body>
 
 </html>
