공지사항 조회수 구현 완료(목록에서 해당 공지사항 클릭해야만 조회수 상승)

--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -28,6 +28,10 @@
                     <th class="w-1/4 text-left text-base pr-4">수 정 일</th>
                     <td class="text-base">-</td>
                 </tr>
+                <tr class="border-b-2 border-black">
+                    <th class="w-1/4 text-left text-base pr-4">조 회 수</th>
+                    <td class="text-base" th:text="${notice.hit}"></td>
+                </tr>
             </table>
         </div>
         <div class="underline-1 border-b-2 border-black w-full mt-8"></div>
