--- a/src/main/resources/templates/notice/detail.html
+++ b/src/main/resources/templates/notice/detail.html
@@ -42,14 +42,14 @@
         <!-- 버튼 컨테이너 -->
         <div class="button flex mt-5 justify-between">
             <div>
-            <!-- 수정 버튼 -->
+                <!-- 수정 버튼 -->
                 <a class="py-2 px-4 rounded text-white bg-blue-500 btn btn-primer btn-outline"
                    href="javascript:void(0);"
                    onclick="confirmEdit(event)"
                    th:data-uri="@{/notice/modify/{id}(id=${notice.id})}"
                    th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}">수정</a>
 
-            <!-- 삭제 버튼 -->
+                <!-- 삭제 버튼 -->
                 <a class="py-2 px-4 ml-3 rounded text-white bg-red-500 btn btn-primer btn-outline"
                    href="javascript:void(0);"
                    onclick="confirmDelete(event)"
@@ -58,10 +58,12 @@
             </div>
             <!-- 목록 버튼 -->
             <div class="button_3 ml-2">
-                <button class="px-4 py-2 bg-blue-500 text-white rounded-md transition duration-300 hover:bg-blue-600 btn btn-primer btn-outline"
-                        type="button">
-                    <a href="/notice/list">목록</a>
-                </button>
+                <a th:href="@{/notice/list}">
+                    <button class="px-4 py-2 bg-blue-500 text-white rounded-md transition duration-300 hover:bg-blue-600 btn btn-primer btn-outline"
+                            type="button">
+                        목록
+                    </button>
+                </a>
             </div>
         </div>
 
@@ -93,6 +95,7 @@
             location.href = event.target.getAttribute("data-uri");
         }
     }
+
 </script>
 </body>
 </html>
