--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -8,8 +8,14 @@
           name="viewport">
     <meta content="ie=edge" http-equiv="X-UA-Compatible">
     <title>관리자 페이지</title>
-    <!-- 테일윈드 스타일시트 링크 추가 -->
-    <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.16/dist/tailwind.min.css" rel="stylesheet">
+    <style>
+        .truncate-230 {
+            max-width: 230px;
+            white-space: nowrap;
+            overflow: hidden;
+            text-overflow: ellipsis;
+        }
+    </style>
 </head>
 <body>
 
@@ -71,7 +77,7 @@
                 <tbody>
                 <tr class="bg-white" th:each="member : ${memberList}">
                     <td class="py-2 px-4 border" th:text="${member.id}"></td>
-                    <td class="py-2 px-4 border" th:text="${member.userName}"></td>
+                    <td class="py-2 px-4 border truncate-230" th:text="${member.userName}"></td>
                     <td class="py-2 px-4 border" th:text="${member.lastName}"></td>
                     <td class="py-2 px-4 border" th:text="${member.firstName}"></td>
                     <td class="py-2 px-4 border" th:text="${member.nickName}"></td>
