--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -69,9 +69,9 @@
                     <th class="py-2 px-4 border w-auto">생년월일</th>
                     <th class="py-2 px-4 border w-auto">전화번호</th>
                     <th class="py-2 px-4 border w-auto">권한</th>
-                    <th class="py-2 px-4 border w-auto">활성 여부</th>
                     <th class="py-2 px-4 border w-auto">권한 부여</th>
-                    <th class="py-2 px-4 border w-auto">삭제</th>
+                    <th class="py-2 px-4 border w-auto">활성 상태</th>
+                    <th class="py-2 px-4 border w-auto">활성 여부</th>
                 </tr>
                 </thead>
                 <tbody>
@@ -86,19 +86,10 @@
                     <td class="py-2 px-4 border" th:text="${member.phone}"></td>
                     <td class="py-2 px-4 border" th:text="${member.role}"></td>
                     <td class="py-2 px-4 border">
-                        <form method="post" th:action="@{/admin/member/toggle-active}">
-                            <input name="memberId" th:value="${member.id}" type="hidden"/>
-                            <button class="text-black px-2 py-1 rounded transition-colors duration-300 ease-in-out hover:bg-blue-600"
-                                    th:classappend="${member.isActive ? 'text-red-500 bg-red-200 hover:bg-red-600' : 'text-blue-500 bg-blue-200 hover:bg-blue-600'}"
-                                    type="submit">
-                                <span th:text="${member.isActive ? '비활성화' : '활성화'}"></span>
-                            </button>
-                        </form>
-                    </td>
-                    <td class="py-2 px-4 border">
                         <form method="post" th:action="@{/admin/member/update-role}">
                             <input name="memberId" th:value="${member.id}" type="hidden"/>
                             <select name="newRole">
+                                <option th:selected="${member.role == 'MEMBER'}" value="MEMBER">권한 선택</option>
                                 <option th:selected="${member.role == 'MEMBER'}" value="MEMBER">Member</option>
                                 <option th:selected="${member.role == 'AUTHOR'}" value="AUTHOR">Author</option>
                                 <option th:selected="${member.role == 'ADMIN'}" value="ADMIN">Admin</option>
@@ -108,13 +99,25 @@
                             <button type="submit">변경</button>
                         </form>
                     </td>
+                    <td class="py-2 px-4 border" th:text="${member.isActive ? '활성화' : '비활성화'}"></td>
                     <td class="py-2 px-4 border">
-                        <form method="post" th:action="@{/admin/member/delete}">
+                        <form method="post" th:action="@{/admin/member/toggle-active}">
                             <input name="memberId" th:value="${member.id}" type="hidden"/>
-                            <button class="bg-red-500 text-red-500 px-2 py-1 rounded hover:bg-red-600"
-                                    type="submit">삭제</button>
+                            <button class="text-black px-2 py-1 rounded transition-colors duration-300 ease-in-out hover:bg-blue-600"
+                                    th:classappend="${member.isActive ? 'text-red-500 bg-red-200 hover:bg-red-600' : 'text-blue-500 bg-blue-200 hover:bg-blue-600'}"
+                                    type="submit">
+                                <span th:text="${member.isActive ? '비활성화' : '활성화'}"></span>
+                            </button>
                         </form>
                     </td>
+
+<!--                    <td class="py-2 px-4 border">-->
+<!--                        <form method="post" th:action="@{/admin/member/delete}">-->
+<!--                            <input name="memberId" th:value="${member.id}" type="hidden"/>-->
+<!--                            <button class="bg-red-500 text-red-500 px-2 py-1 rounded hover:bg-red-600"-->
+<!--                                    type="submit">삭제</button>-->
+<!--                        </form>-->
+<!--                    </td>-->
                 </tr>
                 </tbody>
             </table>
