--- a/src/main/resources/templates/admin/notice.html
+++ b/src/main/resources/templates/admin/notice.html
@@ -72,8 +72,10 @@
                     <td class="py-2 px-4 border" th:text="${notice.id}"></td>
                     <td class="py-2 px-4 border" th:text="${notice.subject}"></td>
                     <td class="py-2 px-4 border" th:text="${notice.register.nickName}"></td>
-                    <td class="py-2 px-4 border" th:text="${notice.createDate}"></td>
-                    <td class="py-2 px-4 border" th:text="${notice.modifyDate}"></td>
+                    <td class="py-2 px-4 border" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"></td>
+                    <td class="py-2 px-4 border" th:unless="${notice.modifyDate != null}">-</td>
+                    <td class="py-2 px-4 border" th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}"
+                        th:if="${notice.modifyDate != null}"></td>
                 </tr>
                 </tbody>
             </table>
