공지사항 테이블 너비조정 및 배치조정

--- a/src/main/resources/templates/notice/list.html
+++ b/src/main/resources/templates/notice/list.html
@@ -52,20 +52,26 @@
                         </thead>
                         <tbody th:if="${notices}">
                         <tr th:each="notice, loop : ${notices}" class="border-b">
-                            <td th:text="${notices.getTotalElements() - (notices.getNumber() * notices.getSize()) - loop.index}"></td>
-                            <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}"  th:attr="data-id=${notice.id}">
-                            <td class="text-left" th:text="${notice.subject}">
-
+                            <td>
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notices.getTotalElements() - (notices.getNumber() * notices.getSize()) - loop.index}" th:attr="data-id=${notice.id}"></a>
                             </td>
-                            <td th:text="${notice.register.nickName}" class="py-2"></td>
-                            <td th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}"
-                                class="py-2"></td>
-                            <td th:if="${notice.modifyDate != null}"
-                                th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}"
-                                class="py-2"></td>
+                            <td class="text-left">
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.subject}" th:attr="data-id=${notice.id}"></a>
+                            </td>
+                            <td class="py-2">
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.register.nickName}" th:attr="data-id=${notice.id}"></a>
+                            </td>
+                            <td class="py-2">
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${#temporals.format(notice.createDate, 'yyyy-MM-dd HH:mm')}" th:attr="data-id=${notice.id}"></a>
+                            </td>
+                            <td class="py-2" th:if="${notice.modifyDate != null}">
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}"
+                                   th:text="${#temporals.format(notice.modifyDate, 'yyyy-MM-dd HH:mm')}" th:attr="data-id=${notice.id}"></a>
+                            </td>
                             <td th:unless="${notice.modifyDate != null}" class="py-2">-</td>
-                            <td th:text="${notice.hit}" class="py-2"></td>
-                            </a>
+                            <td class="py-2">
+                                <a href="javascript:void(0);" class="notice-link" data-id="${notice.id}" th:text="${notice.hit}" th:attr="data-id=${notice.id}"></a>
+                            </td>
                             <td class="py-2">
                                 <!-- 수정/삭제 버튼 -->
                                 <a th:if="${#authorization.expression('hasRole(''ROLE_SUPERADMIN'') or hasRole(''ROLE_ADMIN'')')}"
