제품수정, 관리자페이지 도서 관리 구현

--- a/src/main/resources/templates/admin/member.html
+++ b/src/main/resources/templates/admin/member.html
@@ -47,6 +47,9 @@
                         <li>
                             <a class="menu-link" th:href="@{/admin/calculate}">정산관리</a>
                         </li>
+                        <li>
+                            <a class="menu-link" th:href="@{/product/create}">제품 등록</a>
+                        </li>
                     </ul>
                 </div>
             </div>
